# monad

./: .gitconfig  .gitignore  .viminfo  001_MONAD_COMMAND_CHARTER_2026-07-15.md  002_CHRONICLE_OF_VESSEL_MONAD_2026-07-16.md  AGENTS.md  CLAUDE.md  MONAD_CHARTER_2026-07-14.md  README.md  SPRINT-fleetcore-control.md  Sprint.md  bridge.py  bridge_web.py  chat.py  cmds.sh  duo_chain.py  volatile_context.json  watch_status.py  watchman.py
docs/: admiral-bot.md  commissioning-handoff.md  deployment.md  engineering-command-schema.md  logging-doctrine.md  watchman.md
fleetcore/: Cargo.toml  ENGINEERING_REPORT.md  README.md
fleetcore/data/: seed-world.json
fleetcore/src/: agent.rs  canon.rs  clock.rs  command.rs  event.rs  geography.rs  history_api.rs  lib.rs  main.rs  persistence.rs  route.rs  snapshot.rs  vessel.rs  world.rs
fleetcore/tests/: canon.rs  determinism.rs  durable_vessel_events.rs  fuel.rs  history_api.rs  living_fleet.rs  new_content_events.rs  vessel_events_retention.rs
scripts/: Caddyfile  admiral_bot_draft.py  deploy-web.sh  doctrine-add.py  fleetcore-serve.service  install-libfive-headless.sh  install-living-captain.sh  install-living-fleet.sh  install-npr-headlines.sh  install-world-intake.sh  libfive-api.service  living-captain-status.service  living-fleet-memory-reflect.service  living-fleet-memory-reflect.timer  living-fleet-memory.service  living-fleet.service  monad-lan-web.service  npr-headlines-fetch.service  npr-headlines-fetch.timer  rich-voice.service  world-intake.service
systemd/: monad-watchman.service
tools/: build-log-index.py  (+4 more)
(+482 files in other folders)
