[package]
name = "fleetcore"
version = "0.1.0"
edition = "2021"
description = "Deterministic local world prototype for Monad FleetCore"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "signal"] }
axum = { version = "0.7", features = ["ws"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
rand = "0.8"
sha2 = "0.10"
subtle = "2.6"

[dev-dependencies]
tokio-tungstenite = "0.24"
